Ctrl+Shift+Y --> Ctrl+Shift+8

--- a/on_install.html
+++ b/on_install.html
@@ -144,7 +144,7 @@
       <h3>Step Four</h3>
       <p>All that's left to do is copy and paste the key into <br>
         the StudyMateAI extension 🚀<br>
-        If you have it installed just use <code>ctrl+shift+y</code></p>
+        If you have it installed just use <code>Ctrl+Shift+8</code></p>
       <a class="btn btn-secondary" href="https://studym8ai.app/tutorial.html">Go to Tutorial</a>
     </div>
   </div>
