--- a/how_is_this_free.html
+++ b/how_is_this_free.html
@@ -87,6 +87,17 @@
         </div>
     </div>
 
+    <div id="blogs" class="text-center">
+        <p style="margin: 2px"><b>studym8ai Blog</b></p> 
+         <button class="btn dropdown" data-bs-toggle="dropdown" aria-expanded="false" style="outline: auto;">
+             <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
+         </button>
+          <ul class="dropdown-menu">
+              <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
+              <li><a class="clean_links" href="">Founder's Story</a></li>
+          </ul>
+      </div>
+
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center  pb-3 mb-3">
       <li class="nav-item"><a href="https://studym8ai.app/" class="nav-link px-2 text-muted">Home</a></li>
