--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -77,7 +77,16 @@
     </div>
 </div>
 
-   
+<div id="blogs" class="text-center">
+    <p style="margin: 2px"><b>studym8ai Blog</b></p> 
+     <button class="btn dropdown" data-bs-toggle="dropdown" aria-expanded="false" style="outline: auto;">
+         <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
+     </button>
+      <ul class="dropdown-menu">
+          <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
+          <li><a class="clean_links" href="">Founder's Story</a></li>
+      </ul>
+  </div>
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center  pb-3 mb-3">
