impressum + better responsiveness

--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -102,6 +102,7 @@
 <script src=jquery.js></script>
 <script src="bootstrap.js"></script>
 <script src="darkmode.js"></script>
+<script src="impressum.js"></script>
 
 
 </html>
