--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -171,12 +171,13 @@
                 <hr style="width: 100%;">
                 <p class="text-center text-muted">© 2023 Gian Hofmann, Tom Sommerfeld</p>
                 <p class="text-center text-muted" id="version"></p>
-                <p class="text-center text-muted"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
+                <p id="impressum" class="text-center"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
             </footer>
 
         <script src=jquery.js></script>
         <script src="bootstrap.js"></script>
         <script src="darkmode.js"></script>
+<script src="impressum.js"></script>
         <script></script>
     </body>
 </html>
