--- a/download.html
+++ b/download.html
@@ -108,7 +108,7 @@
     <hr>
     <p class="text-center text-muted">© 2023 Gian Hofmann, Tom Sommerfeld</p>
     <p class="text-center text-muted" id="version"></p>
-    <p class="text-center text-muted"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
+    <p id="impressum" class="text-center"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
     
 </footer>
 
@@ -116,4 +116,5 @@
 <script src=jquery.js></script>
 <script src="bootstrap.js"></script>
 <script src="darkmode.js"></script>
+<script src="impressum.js"></script>
 </html>
