--- a/on_install.html
+++ b/on_install.html
@@ -180,12 +180,13 @@
     <hr style="width: 100%;">
     <p class="text-center text-muted">© 2023 Gian Hofmann, Tom Sommerfeld</p>
     <p class="text-center text-muted" id="version"></p>
-    <p class="text-center text-muted"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
+    <p id="impressum" class="text-center"><a class="text-muted" style="text-decoration: none;" href="">Impressum</a></p>
 </footer>
 </body>
 <script src=jquery.js></script>
 <script src="bootstrap.js"></script>
 <script src="darkmode.js"></script>
+<script src="impressum.js"></script>
 
 
 </html>
