--- a/tutorial.html
+++ b/tutorial.html
@@ -295,7 +295,7 @@ With Singapore's strategic location being a favourable destination for high dema
                       <strong>Installed but nothing happens?</strong><br>
                       If you installed our extension in your browser of choice and wonder where to find it, fear not! It can be accessed through <strong>three</strong> different ways:<br><br>
                       &emsp;1. Open StudyMateAI via the magic sidebar (see the icon in the bottom left/right? Try to hover over it with your mouse). <strong>Tipp:</strong> The position can be changed in the settings.<br><br>
-                      &emsp;2. Open the StudyMateAI popup (default shortcut: <code>ctrl + shift + x</code>). <strong>Tipp:</strong> Try the shortcut when its minimized.<br><br>
+                      &emsp;2. Open the StudyMateAI popup (default shortcut: <code>Ctrl+Shift+8</code>). <strong>Tipp:</strong> Try the shortcut when its minimized.<br><br>
                       &emsp;3. Access StudyMateAI via your browsers extensions menu at the top right. Maybe you already spottet our icon? In Chrome, click the small puzzle piece and then StudyMateAI.<br>&emsp;&emsp;<strong>Tipp:</strong> Use the pin icon next to our extension to create a shortcut in the top right.<br>
                       <img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
                       <div class="mouse-icon">
