loading lazy for performance

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="overflow-hidden" style="max-height: 100vh;">
       <div class="container px-5">
-        <img src="/gifs/Simple Product Demonstration.gif" class="img-fluid  shadow-lg mb-4 image-border" alt="Example image" width="90%" height="" loading="lazy">
+        <img src="/gifs/Simple Product Demonstration.gif" class="img-fluid  shadow-lg mb-4 image-border" alt="Example image" loading="lazy" width="90%" height="">
       </div>
       <hr>
     </div>
@@ -159,7 +159,7 @@
         <div class="col px-4 pt-5 my-5 text-center">
             <h3><p><b> Too lazy to perpare for your exercise-session?
             <br>We have you covered!</b></p></h3>
-            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
+            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" >
             <hr>
         </div>
     </div>
@@ -168,7 +168,7 @@
         <div class="col px-4 pt-5 my-5 text-center">
             <h3><p> <b> StudyMateAI may be desgined to help you study
             <br> but you can use it for almost anything!</b></p></h3> 
-            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:30%;">
+            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" style="max-width:30%;">
           <hr>
         </div>
     </div>
@@ -176,7 +176,7 @@
     <div class="row">
         <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> Too lazy to read all of that?</b></p></h3>
-          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
+          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" >
           <hr>
         </div>
     </div>
@@ -184,11 +184,11 @@
     <div class="row">
         <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> How about some flashcards for <br>that upcoming biology test?</b></p></h3>
-          <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
+          <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" style="max-width:60%;" >
         </div>
         <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
-          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
+          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" style="max-width:60%;" >
         </div>
     </div>
 
