--- a/on_install.html
+++ b/on_install.html
@@ -62,7 +62,7 @@
     </div>
     <div class="overflow-hidden" style="max-height: 100vh;">
       <div class="container px-5">
-        <img src="/gifs/Simple Product Demonstration.gif" class="img-fluid  shadow-lg mb-4 image-border" alt="Example image" width="90%" height="" loading="lazy">
+        <img src="/gifs/Simple Product Demonstration.gif" class="img-fluid  shadow-lg mb-4 image-border" alt="Example image" loading="lazy" width="90%" height="">
       </div>
     </div>
   </div>  
@@ -80,7 +80,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 1.png" alt="" style="width: 30%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 1.png" alt="" loading="lazy" style="width: 30%;">
       </a>
     </div>
     <div class="col-md-5 text-c">
@@ -97,7 +97,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 2.png" alt="" style="width: 30%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 2.png" alt="" loading="lazy" style="width: 30%;">
       </a>
     </div>
     <div class="col-md-5">
@@ -118,7 +118,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 4.png" alt="" style="width: 50%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 4.png" alt="" loading="lazy" style="width: 50%;">
       </a>
     </div>
     <div class="col-md-5">
@@ -137,7 +137,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 5.png" alt="" style="width: 30%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 5.png" alt="" loading="lazy" style="width: 30%;">
       </a>
     </div>
     <div class="col-md-5">
