prevent default scroll to top on empty <a> links

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
 <div class="container px-4 py-5" id="hanging-icons">
-  <h1 class="text-center pb-2">Six different study functions </h1>
+  <h1 id="scrollupAnchor" class="text-center pb-2">Six different study functions </h1>
   <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
     <div class="col d-flex align-items-start">
       <div class="icon-square text-dark flex-shrink-0 me-3">
@@ -81,7 +81,7 @@
       <div>
         <h2>Definition</h2>
         <p><code>The days of typing Serendipity definition into google are over.</code> Get definitions for whatever word you want within seconds!</p>
-        <a id="popup-0" href="#" class="btn btn-secondary">
+        <a id="popup-0" href="#scrollupAnchor" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -93,7 +93,7 @@
       <div>
         <h2>Summarize</h2>
         <p><code>Summarize up to 1000 words effortlessly.<br></code> I bet this is what you always wanted for school. <br></p>
-        <a id="popup-1" href="#" class="btn btn-secondary">
+        <a id="popup-1" href="#scrollupAnchor" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -105,7 +105,7 @@
       <div>
         <h2>Short Summary</h2>
         <p><code>Summarize text even more compact for your specific demands.<br></code>This can be quite handy for studying.</p>
-        <a id="popup-2" href="#" class="btn btn-secondary">
+        <a id="popup-2" href="#scrollupAnchor" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -119,7 +119,7 @@
       <div>
         <h2>Summarize in Bullets</h2>
         <p><code>Need some bullet points for a presentation?<br></code>Turn text into bullet points. What a great productivity hack!</p>
-        <a id="popup-3" href="#" class="btn btn-secondary">
+        <a id="popup-3" href="#scrollupAnchor" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -131,7 +131,7 @@
       <div>
         <h2>Answer Question</h2>
         <p><code>Got a simple assignment to do? <br></code>Turns out Chat GPT is great for providing text-answers to even more complex problems! <BR></BR></p>
-        <a id="popup-4" href="#" class="btn btn-secondary">
+        <a id="popup-4" href="#scrollupAnchor" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
@@ -143,7 +143,7 @@
       <div>
         <h2>Create Flashcards</h2>
         <p><code>Learning with flashcards is one thing but writing them yourself?<br></code>That just seems unnecessary these days.<BR></BR></p>
-        <a id="popup-5" href="#" class="btn btn-secondary">
+        <a id="popup-5" href="#scrollupAnchor" class="btn btn-secondary">
           Try in demo
         </a>
       </div>
