open links in new window on on_install page

--- a/on_install.html
+++ b/on_install.html
@@ -85,8 +85,8 @@
     </div>
     <div class="col-md-5 text-c">
       <h3>Step One</h3>
-      <p>Register on <a class="clean_links" href="https://openai.com/api/login"><b>OpenAI</b></a> or sign in with your account</p>
-      <a class="btn btn-secondary" href="https://openai.com/api/login">Openai.com</a>
+      <p>Register on <a class="clean_links" href="https://openai.com/api/login" target="_blank"><b>OpenAI</b></a> or sign in with your account</p>
+      <a class="btn btn-secondary" href="https://openai.com/api/login" target="_blank">Openai.com</a>
     </div>
   </div>
   <!-- /.row -->
@@ -104,10 +104,10 @@
       <h3>Step Two</h3>
       <p>This process requires your email and phonenumber.<br>This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎
       Don't worry you do not enter an subscription service after the free trial has ended! For
-      details see: <a class="clean_links" href="https://openai.com/api/pricing/"><b>OpenAI Pricing</b></a> <br>
-      The service of StudyMateAI is completely free, learn more at: <a  class="clean_links" href="https://studym8ai.app/privacy_policy_app.html"><b>Privacy and Pricing</b></a></p>
+      details see: <a class="clean_links" href="https://openai.com/api/pricing/" target="_blank"><b>OpenAI Pricing</b></a> <br>
+      The service of StudyMateAI is completely free, learn more at: <a  class="clean_links" href="https://studym8ai.app/privacy_policy_app.html" target="_blank"><b>Privacy and Pricing</b></a></p>
 
-      <a class="btn btn-secondary" href="https://openai.com/api/pricing/">OpenAI Pricing</a>
+      <a class="btn btn-secondary" href="https://openai.com/api/pricing/" target="_blank">OpenAI Pricing</a>
     </div>
   </div>
   <!-- /.row -->
@@ -123,10 +123,10 @@
     </div>
     <div class="col-md-5">
       <h3>Step Three</h3>
-      <p>Navigate to: <a class="clean_links" href="https://platform.openai.com/account/api-keys"><b>platform.openai.com/account/api-keys</b></a> <br>
+      <p>Navigate to: <a class="clean_links" href="https://platform.openai.com/account/api-keys" target="_blank"><b>platform.openai.com/account/api-keys</b></a> <br>
         and click on "Create  new secret key" <br>
         Copy the key to your clipboard </p>
-      <a class="btn btn-secondary" href="https://platform.openai.com/account/api-keys">Get your Key</a>
+      <a class="btn btn-secondary" href="https://platform.openai.com/account/api-keys" target="_blank">Get your Key</a>
     </div>
   </div>
   <!-- /.row -->
@@ -145,7 +145,7 @@
       <p>All that's left to do is copy and paste the key into <br>
         the StudyMateAI extension 🚀<br>
         If you have it installed just use <code>Ctrl+Shift+8</code></p>
-      <a class="btn btn-secondary" href="https://studym8ai.app/tutorial.html">Go to Tutorial</a>
+      <a class="btn btn-secondary" href="https://studym8ai.app/tutorial.html" target="_blank">Go to Tutorial</a>
     </div>
   </div>
   <!-- /.row -->
@@ -153,7 +153,7 @@
   <hr>
 
 
-<img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
+<img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50">
 <div class="mouse-icon">
   <i class="fa fa-mouse-pointer"></i>
 </div>
@@ -164,8 +164,8 @@
        <i id="blogs-icon" class="fas fa-paragraph fa-2x"></i>
    </button>
     <ul class="dropdown-menu">
-        <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
-        <li><a class="clean_links" href="">Founder's Story</a></li>
+        <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank">Chat GPT's Introduction to StudyMateAI</a></li>
+        <li><a class="clean_links" href="" target="_blank" >Founder's Story</a></li>
     </ul>
 </div>
 
