--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Gian Hofmann, Tom Sommerfeld">
+    <meta name="description" content="Simple but powerful study-assistance while browsing. Get definitions for whatever word you want within seconds, summarize up to 1000 words effortlessly, summarize text even more compact, turn text into bullet points and get text-answers to even complex problems. Try in demo and explore all of our functions to make your life easier!">
+    <meta name="keywords" content="StudyMateAI, Tutorial Download, 6 Different Study Functions, Definitions, Summarize, Flashcards, Text-answers, Try in Demo">
   <title>studym8ai.app</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.png"/>
   <!-- Link to Bootstrap CSS -->
