--- a/tutorial.html
+++ b/tutorial.html
@@ -72,13 +72,13 @@
                   <textarea readonly id="deftext" style="margin-top: 1%" class="form-control"></textarea></div>
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="definition">Definition</h3>
-                  <div class="mb-2 text-danger small">
-                      <i class="fas fa-users me-2" aria-controls="#picker-editor"></i><span>Fast and Simple explanations</span>
+                  <div class="mb-2">
+                      <img src="pngs/define-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Fast and Simple explanations</code>
                   </div>
                   <p class="text-muted">This feature explains the meaning of a word, phrase, or concept. It provides a clear and concise explanation of what something is or means, and helps to establish a common understanding of the term being defined. To get the definition of the selected text follow these simple steps: <br><br>
                       &emsp;1. Select the word you want further explanation on.<br>&emsp;&emsp;This could be a single word, a phrase or the name of a concept.<br><br>
                       &emsp;2. Right click and navigate to 'StudyMateAI' and choose 'Definition'.<br><br>
-                      &emsp;3. Open StudyMateAI via the magic sidebar or <a href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
+                      &emsp;3. Open StudyMateAI via the magic sidebar or <a class="clean_links" href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
                       &emsp;4. Click 'Send request'.</p>
               </div>
           </div>
@@ -142,13 +142,13 @@ As machines become increasingly capable, tasks considered to require 'intelligen
                   <textarea readonly id="deftext2" style="margin-top: 1%" class="form-control" rows="7"></textarea> </div>
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="summarize">Summarize</h3>
-                  <div class="mb-2 text-primary small">
-                      <i class="fas fa-users me-2" aria-controls="#picker-editor"></i><span>Make complex text comprehensive</span>
+                  <div class="mb-2">
+                      <img src="pngs/summarize-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Make complex text comprehensive</code>
                   </div>
                   <p class="text-muted">This feature provides you with a concise and clear understanding of the key points or main ideas of the original text. You can choose between a longer version, which will tend to paraphrase shorter texts or reduce the input to its fundamentals.<br><br>
                       &emsp;1. Select the text you want to (short) summarize.<br>&emsp;&emsp;Please note that we can currently handle requests with a <strong>maximum of 1000 words</strong>.<br><br>
                       &emsp;2. Right click and navigate to 'StudyMateAI' and choose 'Summarize Selection' or<br>&emsp;&emsp;'Short Summary'.<br><br>
-                      &emsp;3. Open StudyMateAI via the magic sidebar or <a href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
+                      &emsp;3. Open StudyMateAI via the magic sidebar or <a class="clean_links" href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
                       &emsp;4. Click 'Send request'</p><br>
               </div>
           </div>
@@ -170,13 +170,13 @@ The history of P. peruviana cultivation in South America can be traced to the In
               </div>
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="bulletpoints">Bulletpoints</h3>
-                  <div class="mb-2 text-warning small">
-                      <i class="fas fa-users me-2" aria-controls="#picker-editor"></i><span>Ready to use in presentations and summaries</span>
+                  <div class="mb-2">
+                      <img src="pngs/summarizebullets-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Ready to use in presentations and summaries</code>
                   </div>
                   <p class="text-muted">Bullet points are a type of formatting used to present information in a concise and organized way. They are typically used to highlight key points or important information in a list format.<br><br>
                       &emsp;1. Select the text you want to summarize in bulletpoints.<br>&emsp;&emsp;Please note that we can currently handle requests with a <strong>maximum of 1000 words</strong>.<br><br>
                       &emsp;2. Right click and navigate to 'StudyMateAI' and choose 'Create Bulletpoints'.<br><br>
-                      &emsp;3. Open StudyMateAI via the magic sidebar or <a href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
+                      &emsp;3. Open StudyMateAI via the magic sidebar or <a class="clean_links" href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
                       &emsp;4. Click 'Send request'</p>
               </div>
           </div>
@@ -223,13 +223,13 @@ The history of P. peruviana cultivation in South America can be traced to the In
                   <textarea readonly id="deftext4" style="margin-top: 1%" class="form-control" rows="7"></textarea> </div>
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="question">Answer Question</h3>
-                  <div class="mb-2 text-primary small">
-                      <i class="fas fa-users me-2" aria-controls="#picker-editor"></i><span>Answer practise questions or enter your own prompts</span>
+                  <div class="mb-2">
+                      <img src="pngs/answerquestion-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Answer practise questions or enter your own prompts</code>
                   </div>
                   This feature can be used in different ways, try to enter your own questions into the intput field. The 'Answer Question' option is sort of a wildcard, but to use its main function follow these steps:<br><br>
                   <p class="text-muted">&emsp;1. Select the question you want the answer to.<br><br>
                       &emsp;2. Right click and navigate to 'StudyMateAI' and choose 'Answer Question'.<br><br>
-                      &emsp;3. Open StudyMateAI via the magic sidebar or <a href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
+                      &emsp;3. Open StudyMateAI via the magic sidebar or <a class="clean_links" href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
                       &emsp;4. Click 'Send request'</p><br>
               </div>
           </div>
@@ -267,13 +267,13 @@ With Singapore's strategic location being a favourable destination for high dema
                   <textarea readonly id="deftext5" style="margin-top: 1%" class="form-control" cols="10" rows="5"></textarea></div>
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="flashcards">Create Flashcards</h3>
-                  <div class="mb-2 text-danger small">
-                      <i class="fas fa-users me-2" aria-controls="#picker-editor"></i><span>Prepare your next study session</span>
+                  <div class="mb-2">
+                      <img src="pngs/flashcard-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Prepare your next study session</code>
                   </div>
                   <p class="text-muted">Flashcards can be a simple but effective way to improve memory and retention of information. They typically consist of a set of cards, with a question or prompt on one side and an answer on the other side. To extract the essential features from any text and prepare some flashcards, follow these steps: <br><br>
                       &emsp;1. Select the text you want flashcards of.<br><br>
                       &emsp;2. Right click and navigate to 'StudyMateAI' and choose 'Create Flashcards'.<br><br>
-                      &emsp;3. Open StudyMateAI via the magic sidebar or <a href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
+                      &emsp;3. Open StudyMateAI via the magic sidebar or <a class="clean_links" href="#" data-bs-toggle="tooltip" data-bs-title="shortcut: ctrl + shift + y"> your popup.</a><br><br>
                       &emsp;4. Click 'Send request'.</p>
               </div>
           </div>
