changed .png to .webp -- launched founder_story.html

--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="author" content="Gian Hofmann and Tom Sommerfeld, ChatGPT" />
+        <meta name="keywords" content="StudyMateAI, Gian, Tom, education, learning, Artificial Intelligence (AI), Education, Browser extension, Davinci-3 model, OpenAI, Text summarization, Definitions, Bullet points, Flashcards, Study exercises">
         <title>Chat GPT & StudyMateAI</title>
         <link rel="icon" type="image/x-icon" href="pngs/StudyMateAI-Logo.png" />
         <!-- Link to Font Awesome library -->
