--- a/download.html
+++ b/download.html
@@ -93,7 +93,7 @@
      </button>
       <ul class="dropdown-menu">
           <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html">Chat GPT's Introduction to StudyMateAI</a></li>
-          <li><a class="clean_links" href="">Founder's Story</a></li>
+          <li><a class="clean_links" href="/articles/founder_story.html">Founder's Story</a></li>
       </ul>
   </div>
 
