--- a/on_install.html
+++ b/on_install.html
@@ -165,7 +165,7 @@
    </button>
     <ul class="dropdown-menu">
         <li><a class="clean_links" href="https://studym8ai.app/chat_gpt_introduction_to_studymateai-article.html" target="_blank">Chat GPT's Introduction to StudyMateAI</a></li>
-        <li><a class="clean_links" href="" target="_blank" >Founder's Story</a></li>
+        <li><a class="clean_links" href="/articles/founder_story.html" target="_blank" >Founder's Story</a></li>
     </ul>
 </div>
 
